admission alignment fixed and hide completed form upcoming years

--- a/css/all_forms.css
+++ b/css/all_forms.css
@@ -110,7 +110,7 @@ p, ol li, ul li
         margin-bottom: 3%;
     }
     .add-pages6 {
-        margin-bottom: 6%;
+        margin-bottom: 9%;
     }
     .add-pages7 {
         margin-bottom: 11%;
